--- a/package.json
+++ b/package.json
@@ -56,5 +56,15 @@
     ]
   },
   "main": "dist/index.js",
-  "module": "dist/index.js"
+  "module": "dist/index.js",
+  "homepage": "https://twisttrl.github.io/react-plot-vertical-crosshair",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twisttrl/react-plot-vertical-crosshair.git"
+  },
+  "author": "Lingyu Zhou",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/twisttrl/react-plot-vertical-crosshair/issues"
+  }
 }
